--- a/index.html
+++ b/index.html
@@ -7,51 +7,74 @@
     </head>
 <body>
   <header>
-    <b><i>Görög hitvilág</i></b>
+    <b>Görög hitvilág</b>
+    <b><i>Halász Noel és Horváth-Fock Erik</i></b>
     <hr> <!-- alsó vonal -->
   </header>
   <div>
-    <h1>Görög hitvilág</h1>
+    <h1><u>Görög hitvilág</u></h1>
     <p>
       Az ókori görög vallás magában foglalja az ókori Görögországban megtalálható hiedelmek, szertartások és mitológiák összességét, amely szűkebb értelemben az i. e. 1. évezred elejétől az i. e. 4. századig, a hellenisztikus birodalmak kialakulásáig állt fenn. A görög vallás ezután bomlásnak indult és új formákat vett fel.
 
 A vallásnak nem volt szent könyve, sőt a hellenizmus koráig nem voltak olyan könyvei sem, amelyek kimondottan a görög vallást vagy mitológiát ismertetnék. Ezért a görögök vallását elsősorban a nagy irodalmi alkotásokból, Homérosz műveiből, Hésziodosz és Hérodotosz alkotásaiból, továbbá az ún. lineáris B írással írt táblácskák alapján ismerhetjük meg. Bár ezek többsége nem a görög vallás kezdeti időszakában született, nyomokban azonban fellelhető bennük a görögök ősi vallási elképzelése is.
     </p>
+  <br>
+    Forrás:
+   <a href="https://hu.wikipedia.org/wiki/%C3%93kori_g%C3%B6r%C3%B6g_vall%C3%A1s"
+     target = "_blank">Kattints ide</a>
+    <h1><u>Történelme</u></h1>
     <p>
-      In hac habitasse platea dictumst. Sed congue ultrices dui, a condimentum purus pretium eu. Mauris vitae posuere eros, id pellentesque leo. Pellentesque id viverra erat. Fusce eget turpis et felis aliquet mollis a non est. Sed ac dui fermentum, feugiat neque ut, fringilla ex. Nunc eget velit at nibh tincidunt ultrices at at lacus. Fusce vitae ultrices nisi, et porttitor purus.
+      A Kr. e. 1600 előtti krétai-mükénéi (vagy másképp égei-) vallásban elsősorban istennőket tiszteltek, élükön az anya- és földistennővel, az állatok úrnőjével és a kígyók istennőjével. A mükénéi és trójai feltárások nagy számban hoztak napvilágra bálványokat, kultikus tárgyakat.
 
-Nunc blandit imperdiet finibus. Donec porttitor porttitor iaculis. Aliquam blandit aliquet tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent congue, ligula eget auctor tempor, diam libero venenatis lectus, ac pharetra nibh justo a tellus. Phasellus sit amet justo ac velit aliquet facilisis a ac velit. Duis euismod tellus in metus faucibus, dignissim luctus metus hendrerit. Phasellus pellentesque, libero quis efficitur fringilla, lorem orci blandit urna, sit amet porta libero quam non sapien. Nam accumsan tellus purus, eu pellentesque augue ornare in. Duis tristique sit amet nisl sit amet luctus. Donec vestibulum nisl ac urna vehicula, in interdum tortor feugiat.
-
-Ut mattis tincidunt eleifend. Vivamus tempor, velit ac pharetra ultricies, purus ligula sagittis sapien, sed rutrum sem nisl id ligula. Phasellus eu massa sit amet magna dignissim sollicitudin. Vivamus pulvinar vitae odio sit amet egestas. Praesent laoreet posuere est vel venenatis. Nulla non euismod massa, sit amet maximus elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+Searchtool right.svg	Bővebben: Minószi vallás
+Kr. e. 1600 után, az akhájok benyomulásával előtérbe került az indoeurópai (akháj) istenfelfogás. Az akhájok vallásáról voltaképpen csak egyetlen dolgot tudunk teljes bizonyossággal: hogy legfőbb istenük Zeusz volt, a ragyogó égnek ugyanaz az istene, mint az iráni és indiai árja törzsek ősi istenalakja: Diausz-pita.
     </p>
     <img src="file:///H:/hellasz/gorog%20hitvilag.png" width="300" height="200" alt="Görög hitvilág" title="Görög hitvilág">
     </div>
 
     <div>
-    <h2>Görög istenek</h2>
+    <h2><u>Görög istenek</u></h2>
     <ol>
       <li>Zeusz</li>
-      <li>Héda</li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>Héra</li>
+      <li>Hádész</li>
+      <li>Poszeidón</li>
+      <li>Déméter</li>
+      <li>Hesztia</li>
+      <li>Pallasz Athéné</li>
+      <li>Aphrodité</li>
+      <li>Arész</li>
+      <li>Dionüszösz</li>
+      <li>Artemisz</li>
+      <li>Apollón</li>
+      <li>Héphaisztosz</li>
+      <li>Hermész</li>
     </ol>
+    <img src="file:///H:/hellasz/g%C3%B6r%C3%B6gistenek.png" width="500" height="200" alt="Görög hitvilág" title="Görög istenek">
+    </div>
+    <div>
+    <h3><u>Kapcsolódó cikkek</u></h3>
+     <ul>
+       <li>
+        <a href="https://hu.wikipedia.org/wiki/G%C3%B6r%C3%B6g_mitol%C3%B3gia"
+          target = "_blank">Görög mitológia</a>
+       </li>
 
+       <li>
+        <a href="https://hu.wikipedia.org/wiki/Tizenk%C3%A9t_ol%C3%BCmposzi_isten"
+        target = "_blank">Tizenkét olümposzi isten</a>
+       </li>
 
-    <p>
-      Nunc blandit imperdiet finibus. Donec porttitor porttitor iaculis. Aliquam blandit aliquet tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent congue, ligula eget auctor tempor, diam libero venenatis lectus, ac pharetra nibh justo a tellus. Phasellus sit amet justo ac velit aliquet facilisis a ac velit. Duis euismod tellus in metus faucibus, dignissim luctus metus hendrerit. Phasellus pellentesque, libero quis efficitur fringilla, lorem orci blandit urna, sit amet porta libero quam non sapien. Nam accumsan tellus purus, eu pellentesque augue ornare in. Duis tristique sit amet nisl sit amet luctus. Donec vestibulum nisl ac urna vehicula, in interdum tortor feugiat.
-
-Ut mattis tincidunt eleifend. Vivamus tempor, velit ac pharetra ultricies, purus ligula sagittis sapien, sed rutrum sem nisl id ligula. Phasellus eu massa sit amet magna dignissim sollicitudin. Vivamus pulvinar vitae odio sit amet egestas. Praesent laoreet posuere est vel venenatis. Nulla non euismod massa, sit amet maximus elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-    </p>
-    <img src="file:///H:/hellasz/g%C3%B6r%C3%B6gistenek.png" width="500" height="200" alt="Görög hitvilág" title="Görög hitvilág">
+       <li>
+        <a href="https://hu.wikipedia.org/wiki/%C3%81ldozat_(vall%C3%A1s)"
+        target = "_blank">Áldozat (vallás)</a>
+       </li>
+      
+      <li>
+        <a href="https://hu.wikipedia.org/wiki/Vall%C3%A1st%C3%B6rt%C3%A9net"
+        target = "_blank">Vallástörténet</a>
+      </li>
+     </ul>
     </div>
 </body>
 
