--- a/index.html
+++ b/index.html
@@ -9,7 +9,32 @@
   <header>
     <b>Görög hitvilág</b>
     <b><i>Halász Noel és Horváth-Fock Erik</i></b>
+    <nav>
+    <ul type="A">
+      <li>A görög föld földrajza, nevezetes városai</li>
+      <ul>
+        <li>Máté</li>
+        <li>Kamilla</li>
+      </ul>
+      <li>Híres épületek görög földön </li>
+      <li>A görög konyha </li>
+      <li>A görög tudomány – történetírás </li>
+      <li>A görög tudomány – orvostudomány </li>
+      <li>A görög tudomány – filozófia [az arché]</li>
+      <li>A görög tudomány – irodalomtudomány [líra,eposzok,tragédia] </li>
+      <li>A görög tudomány – természettudomány [matematika, fizika….] </li>
+      <li>A görög hitvilág</li>
+      <li>A görög sport – az olimpia </li>
+      <li>Egyéb. Turista voltam görög földön. </li>
+    </ul>
+    </nav>
     <hr> <!-- alsó vonal -->
+    <!--<dl>
+      <dt>Zeusz</dt>
+      <dd>Főisten</dd>
+      <dt>Poszeidón</dt>
+      <dd>Tenger Isten</dd>
+    </dl> -->
   </header>
   <div>
     <h1><u>Görög hitvilág</u></h1>
