--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <b>Görög hitvilág</b>
     <b><i>Halász Noel és Horváth-Fock Erik</i></b>
     <nav>
-    <ul type="A">
+    <ul>
       <li>A görög föld földrajza, nevezetes városai</li>
       <ul>
         <li>Máté</li>
@@ -30,13 +30,17 @@
     </nav>
     <hr>
   </header>
-    <h1>HN<h1>
+    <h1>HN</h1>
   <div>
     <h1><u>Görög hitvilág</u></h1>
     <p>
       Az ókori görög vallás magában foglalja az ókori Görögországban megtalálható hiedelmek, szertartások és mitológiák összességét, amely szűkebb értelemben az i. e. 1. évezred elejétől az i. e. 4. századig, a hellenisztikus birodalmak kialakulásáig állt fenn. A görög vallás ezután bomlásnak indult és új formákat vett fel.
-
-A vallásnak nem volt szent könyve, sőt a hellenizmus koráig nem voltak olyan könyvei sem, amelyek kimondottan a görög vallást vagy mitológiát ismertetnék. Ezért a görögök vallását elsősorban a nagy irodalmi alkotásokból, Homérosz műveiből, Hésziodosz és Hérodotosz alkotásaiból, továbbá az ún. lineáris B írással írt táblácskák alapján ismerhetjük meg. Bár ezek többsége nem a görög vallás kezdeti időszakában született, nyomokban azonban fellelhető bennük a görögök ősi vallási elképzelése is.
+      vallásnak nem volt szent könyve, sőt a hellenizmus koráig nem voltak olyan könyvei sem, amelyek kimondottan a görög vallást vagy mitológiát ismertetnék. Ezért a görögök vallását elsősorban a nagy irodalmi alkotásokból, Homérosz műveiből, Hésziodosz és Hérodotosz alkotásaiból, továbbá az ún. lineáris B írással írt táblácskák alapján ismerhetjük meg. Bár ezek többsége nem a görög vallás kezdeti időszakában született, nyomokban azonban fellelhető bennük a görögök ősi vallási elképzelése is.
+    </p>
+    <p>
+      A vallásnak nem volt szent könyve, sőt a hellenizmus koráig nem voltak olyan könyvei sem, amelyek kimondottan a görög vallást vagy mitológiát ismertetnék. 
+      Ezért a görögök vallását elsősorban a nagy irodalmi alkotásokból, Homérosz műveiből, Hésziodosz és Hérodotosz alkotásaiból, továbbá az ún. lineáris B írással írt táblácskák alapján ismerhetjük meg. Bár ezek többsége nem a görög vallás kezdeti időszakában született, nyomokban azonban fellelhető bennük a görögök ősi vallási elképzelése is.
+      A mítoszok nem képeznek lezárt világot, ahogyan a görög vallásnak sincsenek egyértelműen meghatározott tanai. A mítoszok az idővel alakultak, változtak.
     </p>
   <br>
     Forrás:
@@ -45,15 +49,18 @@ A vallásnak nem volt szent könyve, sőt a hellenizmus koráig nem voltak olyan
     <h1><u>Történelme</u></h1>
     <p>
       A Kr. e. 1600 előtti krétai-mükénéi (vagy másképp égei-) vallásban elsősorban istennőket tiszteltek, élükön az anya- és földistennővel, az állatok úrnőjével és a kígyók istennőjével. A mükénéi és trójai feltárások nagy számban hoztak napvilágra bálványokat, kultikus tárgyakat.
-
-Searchtool right.svg	Bővebben: Minószi vallás
-Kr. e. 1600 után, az akhájok benyomulásával előtérbe került az indoeurópai (akháj) istenfelfogás. Az akhájok vallásáról voltaképpen csak egyetlen dolgot tudunk teljes bizonyossággal: hogy legfőbb istenük Zeusz volt, a ragyogó égnek ugyanaz az istene, mint az iráni és indiai árja törzsek ősi istenalakja: Diausz-pita.
+    </p>
+    <p>Kr. e. 1600 után, az akhájok benyomulásával előtérbe került az indoeurópai (akháj) istenfelfogás. Az akhájok vallásáról voltaképpen csak egyetlen dolgot tudunk teljes bizonyossággal: hogy legfőbb istenük Zeusz volt, a ragyogó égnek ugyanaz az istene, mint az iráni és indiai árja törzsek ősi istenalakja: Diausz-pita.
+      Kr. e. 1600 után, az akhájok benyomulásával előtérbe került az indoeurópai (akháj) istenfelfogás. Az akhájok vallásáról voltaképpen csak egyetlen dolgot tudunk teljes bizonyossággal: hogy legfőbb istenük Zeusz volt, a ragyogó égnek ugyanaz az istene, mint az iráni és indiai árja törzsek ősi istenalakja: Diausz-pita.
+    </p>
+    <p>A Kr. e. 12-10. században harcias dór törzsek hódították meg az akháj államokat. Ezután alakult ki a görög városállamok (polisz) rendszere, amely a hellenisztikus birodalmak kialakulásáig fennállt.
+       A Kr. e. 8 században élt görög költő, Hésziodosz beszél az istenek születéséről Theogonia című művében.
     </p>
     <img src="file:///H:/hellasz/gorog%20hitvilag.png" width="300" height="200" alt="Görög hitvilág" title="Görög hitvilág">
     </div>
 
     <div>
-    <h2><u>Görög istenek</u></h2>
+    <h1><u>Görög istenek</u></h1>
     <ol>
       <li>Zeusz</li>
       <li>Héra</li>
